[package]
name = "cdoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"

[dependencies]
clap = { version = "4.1.8", features = ["derive", "wrap_help"] }
hashbrown = "0.13.2"
tar = "0.4.38"
